src/main/java/wang/armeria/whkcc/Whkcc.output
Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: TOP_STATEMENTS

    2 TOP_STATEMENTS: STATEMENT_VAR_DEF TOP_STATEMENTS
    3               | STATEMENT_FUNC_DEF TOP_STATEMENTS
    4               | STATEMENT_STRUCT_DEF TOP_STATEMENTS
    5               | %empty

    6 STATEMENTS_BLOCK: BEGIN STATEMENTS END
    7                 | BEGIN END

    8 STATEMENTS: STATEMENT STATEMENTS
    9           | STATEMENT

   10 STATEMENT: STATEMENT_VAR_DEF
   11          | STATEMENT_ASSIGN
   12          | STATEMENT_IF
   13          | STATEMENT_WHILE
   14          | STATEMENT_STRUCT_DEF
   15          | STATEMENT_RETURN
   16          | FUNC_CALL SEMICOLON
   17          | SEMICOLON

   18 EXP_R: EXP_R LT EXP_R
   19      | EXP_R LE EXP_R
   20      | EXP_R GT EXP_R
   21      | EXP_R GE EXP_R
   22      | EXP_R NE EXP_R
   23      | EXP_R EQ EXP_R
   24      | EXP_R PLUS EXP_R
   25      | EXP_R MINUS EXP_R
   26      | EXP_R STAR EXP_R
   27      | EXP_R DIVIDE EXP_R
   28      | EXP_R MOD EXP_R
   29      | EXP_R LOR EXP_R
   30      | EXP_R LAND EXP_R
   31      | EXP_R BOR EXP_R
   32      | EXP_R BXOR EXP_R
   33      | EXP_R APSAND EXP_R
   34      | PLUS EXP_R
   35      | MINUS EXP_R
   36      | ROUND_LEFT EXP_R ROUND_RIGHT
   37      | EXP_L
   38      | APSAND EXP_L
   39      | CONST_STRING
   40      | NUMBER
   41      | FUNC_CALL

   42 EXP_L: ID
   43      | ID DOT EXP_L
   44      | HD_ARRAY
   45      | HD_ARRAY DOT EXP_L

   46 HD_ARRAY: ID SQUARE_LEFT EXP_R SQUARE_RIGHT MORE_ARRAY_DIM

   47 MORE_ARRAY_DIM: SQUARE_LEFT EXP_R SQUARE_RIGHT MORE_ARRAY_DIM
   48               | %empty

   49 NUMBER: CONST_INTEGER
   50       | CONST_BOOLEAN
   51       | CONST_FLOAT

   52 STATEMENT_IF: IF ROUND_LEFT EXP_R ROUND_RIGHT STATEMENTS_BLOCK STATEMENT_ELSE

   53 STATEMENT_ELSE: ELSE STATEMENTS_BLOCK
   54               | ELSE STATEMENT_IF
   55               | %empty

   56 STATEMENT_WHILE: WHILE ROUND_LEFT EXP_R ROUND_RIGHT WHILE_BODY

   57 WHILE_BODY: STATEMENTS_BLOCK
   58           | STATEMENT

   59 STATEMENT_VAR_DEF: VAR_DEF_TYPE DECLARE_INITIALIZE DECLARE_MORE
   60                  | VAR_DEF_TYPE DECLARE_NON_INITIALIZE DECLARE_MORE

   61 DECLARE_MORE: SEMICOLON
   62             | COMMA DECLARE_INITIALIZE DECLARE_MORE
   63             | COMMA DECLARE_NON_INITIALIZE DECLARE_MORE

   64 DECLARE_NON_INITIALIZE: ID
   65                       | STAR ID
   66                       | HD_ARRAY
   67                       | STAR HD_ARRAY

   68 DECLARE_INITIALIZE: ID ASSIGN EXP_R
   69                   | STAR ID ASSIGN EXP_R

   70 STATEMENT_ASSIGN: EXP_L ASSIGN EXP_R SEMICOLON

   71 STATEMENT_STRUCT_DEF: STRUCT ID BEGIN STRUCT_MEMBER_DEF MORE_STRUCT_MEMBER_DEF END SEMICOLON

   72 MORE_STRUCT_MEMBER_DEF: STRUCT_MEMBER_DEF MORE_STRUCT_MEMBER_DEF
   73                       | %empty

   74 STRUCT_MEMBER_DEF: VAR_DEF_TYPE DECLARE_NON_INITIALIZE DECLARE_MORE_NON_INITIALIZE SEMICOLON

   75 DECLARE_MORE_NON_INITIALIZE: COMMA DECLARE_NON_INITIALIZE DECLARE_MORE_NON_INITIALIZE
   76                            | %empty

   77 STATEMENT_RETURN: RETURN EXP_R SEMICOLON

   78 FUNC_CALL: ID ROUND_LEFT EXP_R SEND_FUNC_ARGS ROUND_RIGHT
   79          | ID ROUND_LEFT ROUND_RIGHT

   80 SEND_FUNC_ARGS: COMMA EXP_R SEND_FUNC_ARGS
   81               | %empty

   82 STATEMENT_FUNC_DEF: FUNCTION FUNC_DEF_TYPE ID ROUND_LEFT ROUND_RIGHT STATEMENTS_BLOCK
   83                   | FUNCTION FUNC_DEF_TYPE ID ROUND_LEFT SINGLE_RECV_FUNC_ARG RECV_FUNC_ARGS ROUND_RIGHT STATEMENTS_BLOCK

   84 RECV_FUNC_ARGS: COMMA SINGLE_RECV_FUNC_ARG RECV_FUNC_ARGS
   85               | %empty

   86 SINGLE_RECV_FUNC_ARG: FUNC_DEF_TYPE ID
   87                     | FUNC_DEF_TYPE RECV_HD_ARRAY

   88 RECV_HD_ARRAY: ID SQUARE_LEFT SQUARE_RIGHT MORE_RECV_HD_ARRAY_DIM
   89              | ID SQUARE_LEFT EXP_R SQUARE_RIGHT MORE_RECV_HD_ARRAY_DIM

   90 MORE_RECV_HD_ARRAY_DIM: SQUARE_LEFT EXP_R SQUARE_RIGHT MORE_RECV_HD_ARRAY_DIM
   91                       | %empty

   92 DT_STRUCT: STRUCT ID

   93 DT_POINTER: VAR_DEF_TYPE STAR

   94 VAR_DEF_TYPE: DT_INTEGER
   95             | DT_FLOAT
   96             | DT_BOOLEAN
   97             | DT_STRUCT

   98 FUNC_DEF_TYPE: DT_INTEGER
   99              | DT_FLOAT
  100              | DT_BOOLEAN
  101              | DT_POINTER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DT_INTEGER (258) 94 98
    DT_BOOLEAN (259) 96 100
    DT_FLOAT (260) 95 99
    STRUCT (261) 71 92
    WHILE (262) 56
    IF (263) 52
    ELSE (264) 53 54
    RETURN (265) 77
    FUNCTION (266) 82 83
    CONST_INTEGER (267) 49
    CONST_FLOAT (268) 51
    CONST_STRING (269) 39
    CONST_BOOLEAN (270) 50
    ID (271) 42 43 46 64 65 68 69 71 78 79 82 83 86 88 89 92
    SEMICOLON (272) 16 17 61 70 71 74 77
    COMMA (273) 62 63 75 80 84
    DOT (274) 43 45
    ROUND_LEFT (275) 36 52 56 78 79 82 83
    ROUND_RIGHT (276) 36 52 56 78 79 82 83
    SQUARE_LEFT (277) 46 47 88 89 90
    SQUARE_RIGHT (278) 46 47 88 89 90
    BEGIN (279) 6 7 71
    END (280) 6 7 71
    ASSIGN (281) 68 69 70
    LOR (282) 29
    LAND (283) 30
    BOR (284) 31
    BXOR (285) 32
    APSAND (286) 33 38
    EQ (287) 23
    NE (288) 22
    LE (289) 19
    GE (290) 21
    LT (291) 18
    GT (292) 20
    PLUS (293) 24 34
    MINUS (294) 25 35
    STAR (295) 26 65 67 69 93
    DIVIDE (296) 27
    MOD (297) 28
    GET_ADDR (298)
    POSITIVE (299)
    NEGATIVE (300)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    PROGRAM (47)
        on left: 1
        on right: 0
    TOP_STATEMENTS (48)
        on left: 2 3 4 5
        on right: 1 2 3 4
    STATEMENTS_BLOCK (49)
        on left: 6 7
        on right: 52 53 57 82 83
    STATEMENTS (50)
        on left: 8 9
        on right: 6 8
    STATEMENT (51)
        on left: 10 11 12 13 14 15 16 17
        on right: 8 9 58
    EXP_R (52)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 46 47 52 56 68 69 70 77 78 80 89 90
    EXP_L (53)
        on left: 42 43 44 45
        on right: 37 38 43 45 70
    HD_ARRAY (54)
        on left: 46
        on right: 44 45 66 67
    MORE_ARRAY_DIM (55)
        on left: 47 48
        on right: 46 47
    NUMBER (56)
        on left: 49 50 51
        on right: 40
    STATEMENT_IF (57)
        on left: 52
        on right: 12 54
    STATEMENT_ELSE (58)
        on left: 53 54 55
        on right: 52
    STATEMENT_WHILE (59)
        on left: 56
        on right: 13
    WHILE_BODY (60)
        on left: 57 58
        on right: 56
    STATEMENT_VAR_DEF (61)
        on left: 59 60
        on right: 2 10
    DECLARE_MORE (62)
        on left: 61 62 63
        on right: 59 60 62 63
    DECLARE_NON_INITIALIZE (63)
        on left: 64 65 66 67
        on right: 60 63 74 75
    DECLARE_INITIALIZE (64)
        on left: 68 69
        on right: 59 62
    STATEMENT_ASSIGN (65)
        on left: 70
        on right: 11
    STATEMENT_STRUCT_DEF (66)
        on left: 71
        on right: 4 14
    MORE_STRUCT_MEMBER_DEF (67)
        on left: 72 73
        on right: 71 72
    STRUCT_MEMBER_DEF (68)
        on left: 74
        on right: 71 72
    DECLARE_MORE_NON_INITIALIZE (69)
        on left: 75 76
        on right: 74 75
    STATEMENT_RETURN (70)
        on left: 77
        on right: 15
    FUNC_CALL (71)
        on left: 78 79
        on right: 16 41
    SEND_FUNC_ARGS (72)
        on left: 80 81
        on right: 78 80
    STATEMENT_FUNC_DEF (73)
        on left: 82 83
        on right: 3
    RECV_FUNC_ARGS (74)
        on left: 84 85
        on right: 83 84
    SINGLE_RECV_FUNC_ARG (75)
        on left: 86 87
        on right: 83 84
    RECV_HD_ARRAY (76)
        on left: 88 89
        on right: 87
    MORE_RECV_HD_ARRAY_DIM (77)
        on left: 90 91
        on right: 88 89 90
    DT_STRUCT (78)
        on left: 92
        on right: 97
    DT_POINTER (79)
        on left: 93
        on right: 101
    VAR_DEF_TYPE (80)
        on left: 94 95 96 97
        on right: 59 60 74 93
    FUNC_DEF_TYPE (81)
        on left: 98 99 100 101
        on right: 82 83 86 87


State 0

    0 $accept: • PROGRAM $end
    1 PROGRAM: • TOP_STATEMENTS
    2 TOP_STATEMENTS: • STATEMENT_VAR_DEF TOP_STATEMENTS
    3               | • STATEMENT_FUNC_DEF TOP_STATEMENTS
    4               | • STATEMENT_STRUCT_DEF TOP_STATEMENTS
    5               | • %empty  [$end]
   59 STATEMENT_VAR_DEF: • VAR_DEF_TYPE DECLARE_INITIALIZE DECLARE_MORE
   60                  | • VAR_DEF_TYPE DECLARE_NON_INITIALIZE DECLARE_MORE
   71 STATEMENT_STRUCT_DEF: • STRUCT ID BEGIN STRUCT_MEMBER_DEF MORE_STRUCT_MEMBER_DEF END SEMICOLON
   82 STATEMENT_FUNC_DEF: • FUNCTION FUNC_DEF_TYPE ID ROUND_LEFT ROUND_RIGHT STATEMENTS_BLOCK
   83                   | • FUNCTION FUNC_DEF_TYPE ID ROUND_LEFT SINGLE_RECV_FUNC_ARG RECV_FUNC_ARGS ROUND_RIGHT STATEMENTS_BLOCK
   92 DT_STRUCT: • STRUCT ID
   94 VAR_DEF_TYPE: • DT_INTEGER
   95             | • DT_FLOAT
   96             | • DT_BOOLEAN
   97             | • DT_STRUCT

    DT_INTEGER  shift, and go to state 1
    DT_BOOLEAN  shift, and go to state 2
    DT_FLOAT    shift, and go to state 3
    STRUCT      shift, and go to state 4
    FUNCTION    shift, and go to state 5

    $default  reduce using rule 5 (TOP_STATEMENTS)

    PROGRAM               go to state 6
    TOP_STATEMENTS        go to state 7
    STATEMENT_VAR_DEF     go to state 8
    STATEMENT_STRUCT_DEF  go to state 9
    STATEMENT_FUNC_DEF    go to state 10
    DT_STRUCT             go to state 11
    VAR_DEF_TYPE          go to state 12


State 1

   94 VAR_DEF_TYPE: DT_INTEGER •

    $default  reduce using rule 94 (VAR_DEF_TYPE)


State 2

   96 VAR_DEF_TYPE: DT_BOOLEAN •

    $default  reduce using rule 96 (VAR_DEF_TYPE)


State 3

   95 VAR_DEF_TYPE: DT_FLOAT •

    $default  reduce using rule 95 (VAR_DEF_TYPE)


State 4

   71 STATEMENT_STRUCT_DEF: STRUCT • ID BEGIN STRUCT_MEMBER_DEF MORE_STRUCT_MEMBER_DEF END SEMICOLON
   92 DT_STRUCT: STRUCT • ID

    ID  shift, and go to state 13


State 5

   82 STATEMENT_FUNC_DEF: FUNCTION • FUNC_DEF_TYPE ID ROUND_LEFT ROUND_RIGHT STATEMENTS_BLOCK
   83                   | FUNCTION • FUNC_DEF_TYPE ID ROUND_LEFT SINGLE_RECV_FUNC_ARG RECV_FUNC_ARGS ROUND_RIGHT STATEMENTS_BLOCK
   92 DT_STRUCT: • STRUCT ID
   93 DT_POINTER: • VAR_DEF_TYPE STAR
   94 VAR_DEF_TYPE: • DT_INTEGER
   95             | • DT_FLOAT
   96             | • DT_BOOLEAN
   97             | • DT_STRUCT
   98 FUNC_DEF_TYPE: • DT_INTEGER
   99              | • DT_FLOAT
  100              | • DT_BOOLEAN
  101              | • DT_POINTER

    DT_INTEGER  shift, and go to state 14
    DT_BOOLEAN  shift, and go to state 15
    DT_FLOAT    shift, and go to state 16
    STRUCT      shift, and go to state 17

    DT_STRUCT      go to state 11
    DT_POINTER     go to state 18
    VAR_DEF_TYPE   go to state 19
    FUNC_DEF_TYPE  go to state 20


State 6

    0 $accept: PROGRAM • $end

    $end  shift, and go to state 21


State 7

    1 PROGRAM: TOP_STATEMENTS •

    $default  reduce using rule 1 (PROGRAM)


State 8

    2 TOP_STATEMENTS: • STATEMENT_VAR_DEF TOP_STATEMENTS
    2               | STATEMENT_VAR_DEF • TOP_STATEMENTS
    3               | • STATEMENT_FUNC_DEF TOP_STATEMENTS
    4               | • STATEMENT_STRUCT_DEF TOP_STATEMENTS
    5               | • %empty  [$end]
   59 STATEMENT_VAR_DEF: • VAR_DEF_TYPE DECLARE_INITIALIZE DECLARE_MORE
   60                  | • VAR_DEF_TYPE DECLARE_NON_INITIALIZE DECLARE_MORE
   71 STATEMENT_STRUCT_DEF: • STRUCT ID BEGIN STRUCT_MEMBER_DEF MORE_STRUCT_MEMBER_DEF END SEMICOLON
   82 STATEMENT_FUNC_DEF: • FUNCTION FUNC_DEF_TYPE ID ROUND_LEFT ROUND_RIGHT STATEMENTS_BLOCK
   83                   | • FUNCTION FUNC_DEF_TYPE ID ROUND_LEFT SINGLE_RECV_FUNC_ARG RECV_FUNC_ARGS ROUND_RIGHT STATEMENTS_BLOCK
   92 DT_STRUCT: • STRUCT ID
   94 VAR_DEF_TYPE: • DT_INTEGER
   95             | • DT_FLOAT
   96             | • DT_BOOLEAN
   97             | • DT_STRUCT

    DT_INTEGER  shift, and go to state 1
    DT_BOOLEAN  shift, and go to state 2
    DT_FLOAT    shift, and go to state 3
    STRUCT      shift, and go to state 4
    FUNCTION    shift, and go to state 5

    $default  reduce using rule 5 (TOP_STATEMENTS)

    TOP_STATEMENTS        go to state 22
    STATEMENT_VAR_DEF     go to state 8
    STATEMENT_STRUCT_DEF  go to state 9
    STATEMENT_FUNC_DEF    go to state 10
    DT_STRUCT             go to state 11
    VAR_DEF_TYPE          go to state 12


State 9

    2 TOP_STATEMENTS: • STATEMENT_VAR_DEF TOP_STATEMENTS
    3               | • STATEMENT_FUNC_DEF TOP_STATEMENTS
    4               | • STATEMENT_STRUCT_DEF TOP_STATEMENTS
    4               | STATEMENT_STRUCT_DEF • TOP_STATEMENTS
    5               | • %empty  [$end]
   59 STATEMENT_VAR_DEF: • VAR_DEF_TYPE DECLARE_INITIALIZE DECLARE_MORE
   60                  | • VAR_DEF_TYPE DECLARE_NON_INITIALIZE DECLARE_MORE
   71 STATEMENT_STRUCT_DEF: • STRUCT ID BEGIN STRUCT_MEMBER_DEF MORE_STRUCT_MEMBER_DEF END SEMICOLON
   82 STATEMENT_FUNC_DEF: • FUNCTION FUNC_DEF_TYPE ID ROUND_LEFT ROUND_RIGHT STATEMENTS_BLOCK
   83                   | • FUNCTION FUNC_DEF_TYPE ID ROUND_LEFT SINGLE_RECV_FUNC_ARG RECV_FUNC_ARGS ROUND_RIGHT STATEMENTS_BLOCK
   92 DT_STRUCT: • STRUCT ID
   94 VAR_DEF_TYPE: • DT_INTEGER
   95             | • DT_FLOAT
   96             | • DT_BOOLEAN
   97             | • DT_STRUCT

    DT_INTEGER  shift, and go to state 1
    DT_BOOLEAN  shift, and go to state 2
    DT_FLOAT    shift, and go to state 3
    STRUCT      shift, and go to state 4
    FUNCTION    shift, and go to state 5

    $default  reduce using rule 5 (TOP_STATEMENTS)

    TOP_STATEMENTS        go to state 23
    STATEMENT_VAR_DEF     go to state 8
    STATEMENT_STRUCT_DEF  go to state 9
    STATEMENT_FUNC_DEF    go to state 10
    DT_STRUCT             go to state 11
    VAR_DEF_TYPE          go to state 12


State 10

    2 TOP_STATEMENTS: • STATEMENT_VAR_DEF TOP_STATEMENTS
    3               | • STATEMENT_FUNC_DEF TOP_STATEMENTS
    3               | STATEMENT_FUNC_DEF • TOP_STATEMENTS
    4               | • STATEMENT_STRUCT_DEF TOP_STATEMENTS
    5               | • %empty  [$end]
   59 STATEMENT_VAR_DEF: • VAR_DEF_TYPE DECLARE_INITIALIZE DECLARE_MORE
   60                  | • VAR_DEF_TYPE DECLARE_NON_INITIALIZE DECLARE_MORE
   71 STATEMENT_STRUCT_DEF: • STRUCT ID BEGIN STRUCT_MEMBER_DEF MORE_STRUCT_MEMBER_DEF END SEMICOLON
   82 STATEMENT_FUNC_DEF: • FUNCTION FUNC_DEF_TYPE ID ROUND_LEFT ROUND_RIGHT STATEMENTS_BLOCK
   83                   | • FUNCTION FUNC_DEF_TYPE ID ROUND_LEFT SINGLE_RECV_FUNC_ARG RECV_FUNC_ARGS ROUND_RIGHT STATEMENTS_BLOCK
   92 DT_STRUCT: • STRUCT ID
   94 VAR_DEF_TYPE: • DT_INTEGER
   95             | • DT_FLOAT
   96             | • DT_BOOLEAN
   97             | • DT_STRUCT

    DT_INTEGER  shift, and go to state 1
    DT_BOOLEAN  shift, and go to state 2
    DT_FLOAT    shift, and go to state 3
    STRUCT      shift, and go to state 4
    FUNCTION    shift, and go to state 5

    $default  reduce using rule 5 (TOP_STATEMENTS)

    TOP_STATEMENTS        go to state 24
    STATEMENT_VAR_DEF     go to state 8
    STATEMENT_STRUCT_DEF  go to state 9
    STATEMENT_FUNC_DEF    go to state 10
    DT_STRUCT             go to state 11
    VAR_DEF_TYPE          go to state 12


State 11

   97 VAR_DEF_TYPE: DT_STRUCT •

    $default  reduce using rule 97 (VAR_DEF_TYPE)


State 12

   46 HD_ARRAY: • ID SQUARE_LEFT EXP_R SQUARE_RIGHT MORE_ARRAY_DIM
   59 STATEMENT_VAR_DEF: VAR_DEF_TYPE • DECLARE_INITIALIZE DECLARE_MORE
   60                  | VAR_DEF_TYPE • DECLARE_NON_INITIALIZE DECLARE_MORE
   64 DECLARE_NON_INITIALIZE: • ID
   65                       | • STAR ID
   66                       | • HD_ARRAY
   67                       | • STAR HD_ARRAY
   68 DECLARE_INITIALIZE: • ID ASSIGN EXP_R
   69                   | • STAR ID ASSIGN EXP_R

    ID    shift, and go to state 25
    STAR  shift, and go to state 26

    HD_ARRAY                go to state 27
    DECLARE_NON_INITIALIZE  go to state 28
    DECLARE_INITIALIZE      go to state 29


State 13

   71 STATEMENT_STRUCT_DEF: STRUCT ID • BEGIN STRUCT_MEMBER_DEF MORE_STRUCT_MEMBER_DEF END SEMICOLON
   92 DT_STRUCT: STRUCT ID •  [ID, STAR]

    BEGIN  shift, and go to state 30

    $default  reduce using rule 92 (DT_STRUCT)


State 14

   94 VAR_DEF_TYPE: DT_INTEGER •  [STAR]
   98 FUNC_DEF_TYPE: DT_INTEGER •  [ID]

    ID        reduce using rule 98 (FUNC_DEF_TYPE)
    $default  reduce using rule 94 (VAR_DEF_TYPE)


State 15

   96 VAR_DEF_TYPE: DT_BOOLEAN •  [STAR]
  100 FUNC_DEF_TYPE: DT_BOOLEAN •  [ID]

    ID        reduce using rule 100 (FUNC_DEF_TYPE)
    $default  reduce using rule 96 (VAR_DEF_TYPE)


State 16

   95 VAR_DEF_TYPE: DT_FLOAT •  [STAR]
   99 FUNC_DEF_TYPE: DT_FLOAT •  [ID]

    ID        reduce using rule 99 (FUNC_DEF_TYPE)
    $default  reduce using rule 95 (VAR_DEF_TYPE)


State 17

   92 DT_STRUCT: STRUCT • ID

    ID  shift, and go to state 31


State 18

  101 FUNC_DEF_TYPE: DT_POINTER •

    $default  reduce using rule 101 (FUNC_DEF_TYPE)


State 19

   93 DT_POINTER: VAR_DEF_TYPE • STAR

    STAR  shift, and go to state 32


State 20

   82 STATEMENT_FUNC_DEF: FUNCTION FUNC_DEF_TYPE • ID ROUND_LEFT ROUND_RIGHT STATEMENTS_BLOCK
   83                   | FUNCTION FUNC_DEF_TYPE • ID ROUND_LEFT SINGLE_RECV_FUNC_ARG RECV_FUNC_ARGS ROUND_RIGHT STATEMENTS_BLOCK

    ID  shift, and go to state 33


State 21

    0 $accept: PROGRAM $end •

    $default  accept


State 22

    2 TOP_STATEMENTS: STATEMENT_VAR_DEF TOP_STATEMENTS •

    $default  reduce using rule 2 (TOP_STATEMENTS)


State 23

    4 TOP_STATEMENTS: STATEMENT_STRUCT_DEF TOP_STATEMENTS •

    $default  reduce using rule 4 (TOP_STATEMENTS)


State 24

    3 TOP_STATEMENTS: STATEMENT_FUNC_DEF TOP_STATEMENTS •

    $default  reduce using rule 3 (TOP_STATEMENTS)


State 25

   46 HD_ARRAY: ID • SQUARE_LEFT EXP_R SQUARE_RIGHT MORE_ARRAY_DIM
   64 DECLARE_NON_INITIALIZE: ID •  [SEMICOLON, COMMA]
   68 DECLARE_INITIALIZE: ID • ASSIGN EXP_R

    SQUARE_LEFT  shift, and go to state 34
    ASSIGN       shift, and go to state 35

    $default  reduce using rule 64 (DECLARE_NON_INITIALIZE)


State 26

   46 HD_ARRAY: • ID SQUARE_LEFT EXP_R SQUARE_RIGHT MORE_ARRAY_DIM
   65 DECLARE_NON_INITIALIZE: STAR • ID
   67                       | STAR • HD_ARRAY
   69 DECLARE_INITIALIZE: STAR • ID ASSIGN EXP_R

    ID  shift, and go to state 36

    HD_ARRAY  go to state 37


State 27

   66 DECLARE_NON_INITIALIZE: HD_ARRAY •

    $default  reduce using rule 66 (DECLARE_NON_INITIALIZE)


State 28

   60 STATEMENT_VAR_DEF: VAR_DEF_TYPE DECLARE_NON_INITIALIZE • DECLARE_MORE
   61 DECLARE_MORE: • SEMICOLON
   62             | • COMMA DECLARE_INITIALIZE DECLARE_MORE
   63             | • COMMA DECLARE_NON_INITIALIZE DECLARE_MORE

    SEMICOLON  shift, and go to state 38
    COMMA      shift, and go to state 39

    DECLARE_MORE  go to state 40


State 29

   59 STATEMENT_VAR_DEF: VAR_DEF_TYPE DECLARE_INITIALIZE • DECLARE_MORE
   61 DECLARE_MORE: • SEMICOLON
   62             | • COMMA DECLARE_INITIALIZE DECLARE_MORE
   63             | • COMMA DECLARE_NON_INITIALIZE DECLARE_MORE

    SEMICOLON  shift, and go to state 38
    COMMA      shift, and go to state 39

    DECLARE_MORE  go to state 41


State 30

   71 STATEMENT_STRUCT_DEF: STRUCT ID BEGIN • STRUCT_MEMBER_DEF MORE_STRUCT_MEMBER_DEF END SEMICOLON
   74 STRUCT_MEMBER_DEF: • VAR_DEF_TYPE DECLARE_NON_INITIALIZE DECLARE_MORE_NON_INITIALIZE SEMICOLON
   92 DT_STRUCT: • STRUCT ID
   94 VAR_DEF_TYPE: • DT_INTEGER
   95             | • DT_FLOAT
   96             | • DT_BOOLEAN
   97             | • DT_STRUCT

    DT_INTEGER  shift, and go to state 1
    DT_BOOLEAN  shift, and go to state 2
    DT_FLOAT    shift, and go to state 3
    STRUCT      shift, and go to state 17

    STRUCT_MEMBER_DEF  go to state 42
    DT_STRUCT          go to state 11
    VAR_DEF_TYPE       go to state 43


State 31

   92 DT_STRUCT: STRUCT ID •

    $default  reduce using rule 92 (DT_STRUCT)


State 32

   93 DT_POINTER: VAR_DEF_TYPE STAR •

    $default  reduce using rule 93 (DT_POINTER)


State 33

   82 STATEMENT_FUNC_DEF: FUNCTION FUNC_DEF_TYPE ID • ROUND_LEFT ROUND_RIGHT STATEMENTS_BLOCK
   83                   | FUNCTION FUNC_DEF_TYPE ID • ROUND_LEFT SINGLE_RECV_FUNC_ARG RECV_FUNC_ARGS ROUND_RIGHT STATEMENTS_BLOCK

    ROUND_LEFT  shift, and go to state 44


State 34

   18 EXP_R: • EXP_R LT EXP_R
   19      | • EXP_R LE EXP_R
   20      | • EXP_R GT EXP_R
   21      | • EXP_R GE EXP_R
   22      | • EXP_R NE EXP_R
   23      | • EXP_R EQ EXP_R
   24      | • EXP_R PLUS EXP_R
   25      | • EXP_R MINUS EXP_R
   26      | • EXP_R STAR EXP_R
   27      | • EXP_R DIVIDE EXP_R
   28      | • EXP_R MOD EXP_R
   29      | • EXP_R LOR EXP_R
   30      | • EXP_R LAND EXP_R
   31      | • EXP_R BOR EXP_R
   32      | • EXP_R BXOR EXP_R
   33      | • EXP_R APSAND EXP_R
   34      | • PLUS EXP_R
   35      | • MINUS EXP_R
   36      | • ROUND_LEFT EXP_R ROUND_RIGHT
   37      | • EXP_L
   38      | • APSAND EXP_L
   39      | • CONST_STRING
   40      | • NUMBER
   41      | • FUNC_CALL
   42 EXP_L: • ID
   43      | • ID DOT EXP_L
   44      | • HD_ARRAY
   45      | • HD_ARRAY DOT EXP_L
   46 HD_ARRAY: • ID SQUARE_LEFT EXP_R SQUARE_RIGHT MORE_ARRAY_DIM
   46         | ID SQUARE_LEFT • EXP_R SQUARE_RIGHT MORE_ARRAY_DIM
   49 NUMBER: • CONST_INTEGER
   50       | • CONST_BOOLEAN
   51       | • CONST_FLOAT
   78 FUNC_CALL: • ID ROUND_LEFT EXP_R SEND_FUNC_ARGS ROUND_RIGHT
   79          | • ID ROUND_LEFT ROUND_RIGHT

    CONST_INTEGER  shift, and go to state 45
    CONST_FLOAT    shift, and go to state 46
    CONST_STRING   shift, and go to state 47
    CONST_BOOLEAN  shift, and go to state 48
    ID             shift, and go to state 49
    ROUND_LEFT     shift, and go to state 50
    APSAND         shift, and go to state 51
    PLUS           shift, and go to state 52
    MINUS          shift, and go to state 53

    EXP_R      go to state 54
    EXP_L      go to state 55
    HD_ARRAY   go to state 56
    NUMBER     go to state 57
    FUNC_CALL  go to state 58


State 35

   18 EXP_R: • EXP_R LT EXP_R
   19      | • EXP_R LE EXP_R
   20      | • EXP_R GT EXP_R
   21      | • EXP_R GE EXP_R
   22      | • EXP_R NE EXP_R
   23      | • EXP_R EQ EXP_R
   24      | • EXP_R PLUS EXP_R
   25      | • EXP_R MINUS EXP_R
   26      | • EXP_R STAR EXP_R
   27      | • EXP_R DIVIDE EXP_R
   28      | • EXP_R MOD EXP_R
   29      | • EXP_R LOR EXP_R
   30      | • EXP_R LAND EXP_R
   31      | • EXP_R BOR EXP_R
   32      | • EXP_R BXOR EXP_R
   33      | • EXP_R APSAND EXP_R
   34      | • PLUS EXP_R
   35      | • MINUS EXP_R
   36      | • ROUND_LEFT EXP_R ROUND_RIGHT
   37      | • EXP_L
   38      | • APSAND EXP_L
   39      | • CONST_STRING
   40      | • NUMBER
   41      | • FUNC_CALL
   42 EXP_L: • ID
   43      | • ID DOT EXP_L
   44      | • HD_ARRAY
   45      | • HD_ARRAY DOT EXP_L
   46 HD_ARRAY: • ID SQUARE_LEFT EXP_R SQUARE_RIGHT MORE_ARRAY_DIM
   49 NUMBER: • CONST_INTEGER
   50       | • CONST_BOOLEAN
   51       | • CONST_FLOAT
   68 DECLARE_INITIALIZE: ID ASSIGN • EXP_R
   78 FUNC_CALL: • ID ROUND_LEFT EXP_R SEND_FUNC_ARGS ROUND_RIGHT
   79          | • ID ROUND_LEFT ROUND_RIGHT

    CONST_INTEGER  shift, and go to state 45
    CONST_FLOAT    shift, and go to state 46
    CONST_STRING   shift, and go to state 47
    CONST_BOOLEAN  shift, and go to state 48
    ID             shift, and go to state 49
    ROUND_LEFT     shift, and go to state 50
    APSAND         shift, and go to state 51
    PLUS           shift, and go to state 52
    MINUS          shift, and go to state 53

    EXP_R      go to state 59
    EXP_L      go to state 55
    HD_ARRAY   go to state 56
    NUMBER     go to state 57
    FUNC_CALL  go to state 58


State 36

   46 HD_ARRAY: ID • SQUARE_LEFT EXP_R SQUARE_RIGHT MORE_ARRAY_DIM
   65 DECLARE_NON_INITIALIZE: STAR ID •  [SEMICOLON, COMMA]
   69 DECLARE_INITIALIZE: STAR ID • ASSIGN EXP_R

    SQUARE_LEFT  shift, and go to state 34
    ASSIGN       shift, and go to state 60

    $default  reduce using rule 65 (DECLARE_NON_INITIALIZE)


State 37

   67 DECLARE_NON_INITIALIZE: STAR HD_ARRAY •

    $default  reduce using rule 67 (DECLARE_NON_INITIALIZE)


State 38

   61 DECLARE_MORE: SEMICOLON •

    $default  reduce using rule 61 (DECLARE_MORE)


State 39

   46 HD_ARRAY: • ID SQUARE_LEFT EXP_R SQUARE_RIGHT MORE_ARRAY_DIM
   62 DECLARE_MORE: COMMA • DECLARE_INITIALIZE DECLARE_MORE
   63             | COMMA • DECLARE_NON_INITIALIZE DECLARE_MORE
   64 DECLARE_NON_INITIALIZE: • ID
   65                       | • STAR ID
   66                       | • HD_ARRAY
   67                       | • STAR HD_ARRAY
   68 DECLARE_INITIALIZE: • ID ASSIGN EXP_R
   69                   | • STAR ID ASSIGN EXP_R

    ID    shift, and go to state 25
    STAR  shift, and go to state 26

    HD_ARRAY                go to state 27
    DECLARE_NON_INITIALIZE  go to state 61
    DECLARE_INITIALIZE      go to state 62


State 40

   60 STATEMENT_VAR_DEF: VAR_DEF_TYPE DECLARE_NON_INITIALIZE DECLARE_MORE •

    $default  reduce using rule 60 (STATEMENT_VAR_DEF)


State 41

   59 STATEMENT_VAR_DEF: VAR_DEF_TYPE DECLARE_INITIALIZE DECLARE_MORE •

    $default  reduce using rule 59 (STATEMENT_VAR_DEF)


State 42
